--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="calendar">
-    <app-calendar></app-calendar>
+<div class="rooms-management">
+    <h1>Rooms</h1>
+    <app-rooms></app-rooms>
 </div>
