--- a/src/app/rooms/room-form/room-form.component.html
+++ b/src/app/rooms/room-form/room-form.component.html
@@ -5,21 +5,21 @@
         <div class="form-field">
             <mat-form-field>
                 <mat-label>Nom de la salle</mat-label>
-                <input type="text" matInput formControlName="roomName"placeholder="Ex: La maison du savoir" #roomNameElement>
+                <input type="text" matInput formControlName="name" placeholder="Ex: La maison du savoir">
             </mat-form-field>
         </div>
 
         <div class="form-field">
             <mat-form-field>
                 <mat-label>Adresse</mat-label>
-                <input type="text" matInput formControlName="roomAddress"placeholder="Ex: 11 avenue des lilas, 31320 Castanet Tolosan">
+                <input type="text" matInput formControlName="address"placeholder="Ex: 11 avenue des lilas, 31320 Castanet Tolosan">
             </mat-form-field>
         </div>
 
         <div class="form-field">
             <mat-form-field>
                 <mat-label>Nombre de tables</mat-label>
-                <input type="number" matInput formControlName="roomTableCount"placeholder="Ex: 21">
+                <input type="number" matInput formControlName="tableCount"placeholder="Ex: 21">
             </mat-form-field>
         </div>
 
