--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,7 @@
     <h1>Rooms</h1>
     <app-rooms></app-rooms>
 </div>
+<div class="plays-management">
+    <h1>Plays</h1>
+    <app-plays></app-plays>
+</div>
